--- a/src/componenets/CommentSection/CommentSection.scss
+++ b/src/componenets/CommentSection/CommentSection.scss
@@ -46,6 +46,8 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 1rem;
+    border-bottom: 1px solid #afafaf;
+    padding-bottom: 1rem;
 
     &__nameAndTimestamp{
         display: flex;
