--- a/src/componenets/NavBar/NavBar.scss
+++ b/src/componenets/NavBar/NavBar.scss
@@ -85,9 +85,15 @@
     &__uploadButton {
         color: white;
         text-decoration: none;
-        padding: 0.5rem 0.5rem;
+        padding: 0;
         border-radius: 3px;
         font-size: 2rem;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        
         @include button-bg(#3498db);
         width: calc(100% - 2rem);
         margin: 1rem;
