--- a/src/componenets/VideoList/VideoList.scss
+++ b/src/componenets/VideoList/VideoList.scss
@@ -3,3 +3,12 @@
     list-style: none;
     padding-left: 0px;
 }
+
+.next-videos{
+    margin-left: 1rem;
+    margin-right: 1rem;
+
+
+    font-weight: 700;
+    color: #afafaf;
+}
