--- a/src/componenets/NavBar/NavBar.scss
+++ b/src/componenets/NavBar/NavBar.scss
@@ -20,6 +20,10 @@
     align-items: center;
     flex-direction: column;
 
+    @include breakpoint(tablet) {
+        flex-direction: row;
+    }
+
 
 
 
@@ -44,6 +48,12 @@
         border-radius: 3.125rem;
         margin: 0rem 1rem;
 
+        @include breakpoint(tablet) {
+            display: none;
+        }
+
+
+
 
     }
 
@@ -57,7 +67,7 @@
         border: 1px solid #ccc;
         border-radius: 5px;
         padding: 5px;
-        height: 3rem;
+        height: 2rem;
         width: 100%;
         margin-left: 1rem;
 
@@ -79,7 +89,13 @@
         width: 3.125rem;
         height: 3.125rem;
         border-radius: 3.125rem;
-        
+        margin-right: 1rem;
+        display: none;
+
+        @include breakpoint(tablet) {
+            display: inline;
+        }
+
 
     }
 
@@ -88,14 +104,20 @@
         text-decoration: none;
         padding: 0;
         border-radius: 3px;
-        font-size: 2rem;
+        font-size: 1.5rem;
+        height: 40px;
 
         display: flex;
         justify-content: center;
         align-items: center;
 
-        
-        @include button-bg(#3498db);
+        @include breakpoint(tablet) {
+            min-width: 150px;
+        }
+
+
+
+        @include button-bg(#0095ff);
         width: calc(100% - 2rem);
         margin: 1rem;
     }
