--- a/src/componenets/VideoListItem/VideoListItem.scss
+++ b/src/componenets/VideoListItem/VideoListItem.scss
@@ -4,6 +4,9 @@
     
     width: calc(100% - 2rem);
     align-items: center;
+
+    color: black;
+    text-decoration: none;
   
 
     display: flex;
