--- a/src/styles/partials/_minxins.scss
+++ b/src/styles/partials/_minxins.scss
@@ -10,3 +10,10 @@
         background: darken($bg, 25%);
     }
 }
+
+
+@mixin breakpoint($breakpoint) {
+    @if $breakpoint == tablet {
+      @media (min-width: 769px) { @content; }
+    }
+}
