--- a/src/styles/partials/_minxins.scss
+++ b/src/styles/partials/_minxins.scss
@@ -16,4 +16,8 @@
     @if $breakpoint == tablet {
       @media (min-width: 769px) { @content; }
     }
+    @else if $breakpoint ==desktop{
+        @media (min-width: 1281px) { @content; }
+
+    }
 }
