--- a/src/App.scss
+++ b/src/App.scss
@@ -5,12 +5,13 @@
     flex-direction: column;
 }
 
-.body{
+.home-body{
 
     
     @include breakpoint(desktop){
         display: flex;
         flex-direction: row;
+        align-items: flex-start;
 
     }
 }
