--- a/src/pages/UploadPage/UploadPage.scss
+++ b/src/pages/UploadPage/UploadPage.scss
@@ -10,7 +10,81 @@
 
     &__title {
         margin: 1rem;
+        
     }
+}
+
+
+.upload-page-body{
+
+    border: 1px, #afafaf;
+    
+
+    @include breakpoint(desktop){
+
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+    
+}
+    
+
+
+.upload-preview {
+
+    width: 100%;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    
+}
+
+
+.image-section{
+    border-top: 1px;
+    @include breakpoint(tablet){
+
+        max-width: 50%;
+    }
+    @include breakpoint(desktop){
+
+        max-width: 25%;
+    }
+
+
+}
+
+
+.form-section{
+    width: 80%;
+    height: 100%;
+
+    @include breakpoint(desktop){
+
+        max-width: 60%;
+    }
+
+
+}
+
+.buttons-section{
+
+
+    @include breakpoint(tablet){
+        flex-direction: row-reverse;
+
+
+        display: flex
+    }
+    @include breakpoint(desktop){
+        flex-direction: row-reverse;
+
+        width: 50%;
+    }
+
+
+
 }
 
 .form-group {
@@ -33,6 +107,7 @@
                 display: flex;
                 flex-direction: column;
                 margin-bottom: 0.5rem;
+                width: 100%
             }
 
             &--text {
@@ -49,7 +124,7 @@
                 font-size: 2rem;
 
                 button {
-                    @include button-bg(#3498db);
+                    @include button-bg(#0095ff);
                 }
 
             }
@@ -64,6 +139,8 @@
         flex-direction: row;
         justify-content: center;
         align-items: center;
+        height: 40px;
+        width: 150px;
 
         border-color: #3498db;
         border-radius: 2%;
@@ -113,7 +190,3 @@
 
 }
 
-.upload-preview {
-
-    width: 100%;
-}
