--- a/src/componenets/NavBar/NavBar.scss
+++ b/src/componenets/NavBar/NavBar.scss
@@ -1,5 +1,11 @@
 @import '../../styles/partials/minxins';
 
+@import '../../styles/partials/fonts';
+
+*{
+    font-family: "AvenirNextLTPro-Regular", sans-serif;
+}
+
 
 // @mixin button-bg($bg) {
 //     background: $bg;
